--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
     <module>org.livingplace.controlling.informations.registry.commands</module>
     <module>org.livingplace.controlling.informations.registry.impl</module>
     <module>org.livingplace.controlling.informations.sensors.time</module>
+    <module>org.livingplace.controlling.informations.sensors.temperature</module>
     <module>org.livingplace.controlling.knowledge.api</module>
   </modules>
 
