--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -23,7 +23,7 @@
     <!-- Platform Provided OSGi Service implementations -->
     <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
     <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
-    <org.apache.felix.configadmin.version>1.4.0</org.apache.felix.configadmin.version>
+    <org.apache.felix.configadmin.version>1.6.0</org.apache.felix.configadmin.version>
     <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
     <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
@@ -39,6 +39,7 @@
     <org.apache.felix.shell.version>1.0.0</org.apache.felix.shell.version>
     <org.osgi.service.obr.version>1.0.2</org.osgi.service.obr.version>
     <org.apache.felix.org.osgi.core.version>1.0.0</org.apache.felix.org.osgi.core.version>
+    <pax-confman-propsloader.version>0.2.3</pax-confman-propsloader.version>
   </properties>
 
   <packaging>pom</packaging>
@@ -82,6 +83,11 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.configadmin</artifactId>
       <version>${org.apache.felix.configadmin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.confman</groupId>
+      <artifactId>pax-confman-propsloader</artifactId>
+      <version>${pax-confman-propsloader.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
