--- a/org.livingplace.controlling.informations.sensors.position/pom.xml
+++ b/org.livingplace.controlling.informations.sensors.position/pom.xml
@@ -85,4 +85,68 @@
     </dependency>
   </dependencies>
 
+
+  <build>
+    <plugins>
+      <plugin>
+        <!--
+         | the following instructions build a simple set of public/private classes into an OSGi bundle
+        -->
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.7</version>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <extensions>true</extensions>
+        <configuration>
+          <supportedProjectTypes>
+            <supportedProjectType>jar</supportedProjectType>
+            <supportedProjectType>bundle</supportedProjectType>
+          </supportedProjectTypes>
+          <instructions>
+            <!-- Bundle -->
+            <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Vendor>${project.groupId}</Bundle-Vendor>
+            <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
+
+            <Include-Resource>{maven-resources}, {maven-dependencies}</Include-Resource>
+            <Embed-Dependency>
+              *;scope=compile|runtime;inline=true;artifactId=!org.apache.logging!org.apache.felix.*|!org.livingplace.*|org.osgi.*
+            </Embed-Dependency>
+            <Embed-Transitive>true</Embed-Transitive>
+
+            <!-- Package -->
+            <Export-Package>
+              !${bundle.namespace}.internal.*,
+              ${bundle.namespace}.*;version="${project.version}"
+            </Export-Package>
+            <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+            <Import-Package>
+              *;resolution:=optional,
+              org.apache.log4j; version="[1.2,1.3)"; provider=paxlogging,
+              org.apache.commons.logging; version="[1.0,1.1)"; provider=paxlogging
+            </Import-Package>
+
+            <!--Service-->
+            <Import-Service>
+              org.livingplace.controlling.informations.registry.api.IInformationRegistry,
+              org.livingplace.controlling.informations.registry.api.IInformationRegistryFactory
+            </Import-Service>
+            <Service-Component>
+              OSGI-INF/serviceComponents.xml
+            </Service-Component>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
