--- a/org.livingplace.controlling.informations.sensors.position/pom.xml
+++ b/org.livingplace.controlling.informations.sensors.position/pom.xml
@@ -2,86 +2,91 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <parent>
-    <relativePath>../poms/compiled/</relativePath>
-    <groupId>org.livingplace.bundles.controlling.build</groupId>
-    <artifactId>compiled-bundle-settings</artifactId>
+    <parent>
+        <relativePath>../poms/compiled/</relativePath>
+        <groupId>org.livingplace.bundles.controlling.build</groupId>
+        <artifactId>compiled-bundle-settings</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <properties>
+        <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
+        <bundle.namespace>${project.artifactId}</bundle.namespace>
+    </properties>
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.livingplace.bundles.controlling</groupId>
+    <artifactId>org.livingplace.controlling.informations.sensors.position</artifactId>
     <version>1.0-SNAPSHOT</version>
-  </parent>
 
-  <properties>
-    <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
-    <bundle.namespace>${project.artifactId}</bundle.namespace>
-  </properties>
+    <name>LivingPlace :: Controlling :: Informations :: Sensors :: Position</name>
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling</groupId>
-  <artifactId>org.livingplace.controlling.informations.sensors.position</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <packaging>bundle</packaging>
 
-  <name>LivingPlace :: Controlling :: Informations :: Sensors :: Position</name>
+    <repositories>
+        <repository>
+            <id>devsupport.informatik.haw-hamburg.de-RELEASE</id>
+            <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/releases</url>
+        </repository>
+    </repositories>
 
-  <packaging>bundle</packaging>
+    <dependencies>
+        <!--OSGi Core Dependencies-->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!--Logging Dependencies-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+        <!-- LPMessaging Dependencies -->
+        <dependency>
+            <groupId>org.livingplace.bundles.messaging</groupId>
+            <artifactId>org.livingplace.messaging.activemq.api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.livingplace.bundles.messaging</groupId>
+            <artifactId>org.livingplace.messaging.activemq.impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- GSon -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
-  <repositories>
-    <repository>
-      <id>devsupport.informatik.haw-hamburg.de-RELEASE</id>
-      <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/releases</url>
-    </repository>
-  </repositories>
-
-  <dependencies>
-    <!--OSGi Core Dependencies-->
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <!--Logging Dependencies-->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
-    </dependency>
-    <!-- LPMessaging Dependencies -->
-    <dependency>
-      <groupId>org.livingplace.messaging</groupId>
-      <artifactId>org.livingplace.messaging.activemq.wrapper</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
-    </dependency>
-    <!-- GSon -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.2.2</version>
-    </dependency>
-
-    <!-- Controlling Dependencies -->
-    <dependency>
-      <groupId>org.livingplace.bundles.controlling</groupId>
-      <artifactId>org.livingplace.controlling.informations.api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.livingplace.bundles.controlling</groupId>
-      <artifactId>org.livingplace.controlling.informations.registry.api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <!-- Component Annotations Dependencies -->
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.scr</artifactId>
-      <version>1.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.scr.annotations</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-  </dependencies>
+        <!-- Controlling Dependencies -->
+        <dependency>
+            <groupId>org.livingplace.bundles.controlling</groupId>
+            <artifactId>org.livingplace.controlling.informations.api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.livingplace.bundles.controlling</groupId>
+            <artifactId>org.livingplace.controlling.informations.registry.api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- Component Annotations Dependencies -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+    </dependencies>
 </project>
