--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -21,11 +21,9 @@
     <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
     <org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
     <!-- Platform Provided OSGi Service implementations -->
-    <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
     <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
     <org.apache.felix.configadmin.version>1.6.0</org.apache.felix.configadmin.version>
     <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
-    <pax-confman-propsloader.version>0.2.3</pax-confman-propsloader.version>
     <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
     <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
@@ -40,6 +38,10 @@
     <org.apache.felix.shell.version>1.0.0</org.apache.felix.shell.version>
     <org.osgi.service.obr.version>1.0.2</org.osgi.service.obr.version>
     <org.apache.felix.org.osgi.core.version>1.0.0</org.apache.felix.org.osgi.core.version>
+    <!--Pax Logging Facilities-->
+    <pax-logging.version>1.7.0</pax-logging.version>
+    <!--Pax Confman Dependencies-->
+    <pax-confman-propsloader.version>0.2.3</pax-confman-propsloader.version>
   </properties>
 
   <!--
@@ -72,11 +74,6 @@
       <version>${org.apache.felix.gogo.runtime.version}</version>
     </dependency>
     <!-- Platform Provided OSGi Service implementations -->
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.log</artifactId>
-      <version>${org.apache.felix.log.version}</version>
-    </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.configadmin</artifactId>
@@ -159,6 +156,22 @@
       <artifactId>org.osgi.core</artifactId>
       <version>${org.apache.felix.org.osgi.core.version}</version>
     </dependency>
+      <!-- Pax Logging Facilities -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.logging</groupId>
+          <artifactId>pax-logging-service</artifactId>
+          <version>${pax-logging.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.logging</groupId>
+          <artifactId>pax-logging-api</artifactId>
+          <version>${pax-logging.version}</version>
+      </dependency>
   </dependencies>
 
 </project>
