--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <organization>
-        <name>livingplace.org</name>
-        <url>http://livingplace.org</url>
-    </organization>
+  <organization>
+    <name>livingplace.org</name>
+    <url>http://livingplace.org</url>
+  </organization>
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.livingplace.bundles</groupId>
-    <artifactId>controlling</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.livingplace.bundles</groupId>
+  <artifactId>controlling</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <name>org.livingplace.bundles.controlling (OSGi project)</name>
+  <name>org.livingplace.bundles.controlling (OSGi project)</name>
 
-    <description>Generated using Pax-Construct</description>
+  <description>Generated using Pax-Construct</description>
 
-    <properties>
-        <org.osgi.service.http.port>8080</org.osgi.service.http.port>
-        <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <properties>
+    <org.osgi.service.http.port>8080</org.osgi.service.http.port>
+    <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <packaging>pom</packaging>
+  <packaging>pom</packaging>
 
-    <modules>
-        <module>poms</module>
-        <module>provision</module>
-        <module>org.livingplace.controlling.api</module>
-        <module>org.livingplace.controlling.actions.api</module>
-        <module>org.livingplace.controlling.actions.registry.api</module>
-        <module>org.livingplace.controlling.actions.registry.commands</module>
-        <module>org.livingplace.controlling.actions.registry.impl</module>
-        <module>org.livingplace.controlling.actions.actors.time</module>
-        <module>org.livingplace.controlling.informations.api</module>
-        <module>org.livingplace.controlling.informations.registry.api</module>
-        <module>org.livingplace.controlling.informations.registry.commands</module>
-        <module>org.livingplace.controlling.informations.registry.impl</module>
-        <module>org.livingplace.controlling.informations.sensors.time</module>
-        <module>org.livingplace.controlling.informations.sensors.position</module>
-        <module>org.livingplace.controlling.knowledge.api</module>
-    </modules>
+  <modules>
+    <module>poms</module>
+    <module>provision</module>
+    <module>org.livingplace.controlling.api</module>
+    <module>org.livingplace.controlling.actions.api</module>
+    <module>org.livingplace.controlling.actions.registry.api</module>
+    <module>org.livingplace.controlling.actions.registry.commands</module>
+    <module>org.livingplace.controlling.actions.registry.impl</module>
+    <module>org.livingplace.controlling.actions.actors.time</module>
+    <module>org.livingplace.controlling.informations.api</module>
+    <module>org.livingplace.controlling.informations.registry.api</module>
+    <module>org.livingplace.controlling.informations.registry.commands</module>
+    <module>org.livingplace.controlling.informations.registry.impl</module>
+    <module>org.livingplace.controlling.informations.sensors.time</module>
+    <module>org.livingplace.controlling.informations.sensors.position</module>
+    <module>org.livingplace.controlling.knowledge.api</module>
+    <module>org.livingplace.controlling.informations.sensors.doorcontrol</module>
+    <module>org.livingplace.controlling.actions.actors.doorcontrol</module>
+  </modules>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.ops4j</groupId>
-                <artifactId>maven-pax-plugin</artifactId>
-                <version>1.5</version>
-                <configuration>
-                    <provision>
-                        <param>--platform=felix</param>
-                        <param>--log=debug</param>
-                        <param>--profiles=web</param>
-                        <param>wrap:mvn:org.apache.activemq/activemq-client/5.8.0</param>
-                    </provision>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-                <version>2.5.1</version>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.ops4j</groupId>
+        <artifactId>maven-pax-plugin</artifactId>
+        <version>1.5</version>
+        <configuration>
+          <provision>
+            <param>--platform=felix</param>
+            <param>--log=debug</param>
+            <param>--profiles=web</param>
+            <param>wrap:mvn:org.apache.activemq/activemq-client/5.8.0</param>
+          </provision>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+        <version>2.5.1</version>
+      </plugin>
+    </plugins>
+  </build>
 
-    <distributionManagement>
-        <repository>
-            <id>devsupport.informatik.haw-hamburg.de-RELEASE</id>
-            <name>LivingPlace Nexus Release Repo</name>
-            <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>devsupport.informatik.haw-hamburg.de-SNAPSHOT</id>
-            <name>LivingPlace Nexus Snapshots Repo</name>
-            <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>devsupport.informatik.haw-hamburg.de-RELEASE</id>
+      <name>LivingPlace Nexus Release Repo</name>
+      <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>devsupport.informatik.haw-hamburg.de-SNAPSHOT</id>
+      <name>LivingPlace Nexus Snapshots Repo</name>
+      <url>http://devsupport.informatik.haw-hamburg.de/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
