messagedefines bundle importiert bearbeitung der doorcontrol rule

--- a/org.livingplace.controlling.actions.actors.doorcontrol/pom.xml
+++ b/org.livingplace.controlling.actions.actors.doorcontrol/pom.xml
@@ -77,6 +77,13 @@
           <!--<artifactId>doordefines</artifactId>-->
           <!--<version>1.7-SNAPSHOT</version>-->
       <!--</dependency>-->
+      <dependency>
+          <groupId>org.livingplace.bundles.messagingdefines</groupId>
+          <artifactId>org.livingplace.bundles.messagingdefines</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+
+
       <!-- LPMessaging Dependencies -->
       <dependency>
           <groupId>org.livingplace.bundles.messaging</groupId>
@@ -84,11 +91,11 @@
           <version>1.0-SNAPSHOT</version>
       </dependency>
       <!-- GSon -->
-      <!--<dependency>-->
-          <!--<groupId>com.google.code.gson</groupId>-->
-          <!--<artifactId>gson</artifactId>-->
-          <!--<version>2.2.2</version>-->
-      <!--</dependency>-->
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.2.2</version>
+      </dependency>
 
 
   </dependencies>
