--- a/org.livingplace.controlling.actions.actors.doorcontrol/pom.xml
+++ b/org.livingplace.controlling.actions.actors.doorcontrol/pom.xml
@@ -46,17 +46,17 @@
           <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
           <version>1.0-SNAPSHOT</version>
       </dependency>
-      <!-- Component Annotations Dependencies -->
-      <!--<dependency>-->
-          <!--<groupId>org.apache.felix</groupId>-->
-          <!--<artifactId>org.apache.felix.scr</artifactId>-->
-          <!--<version>1.6.0</version>-->
-      <!--</dependency>-->
-      <!--<dependency>-->
-          <!--<groupId>org.apache.felix</groupId>-->
-          <!--<artifactId>org.apache.felix.scr.annotations</artifactId>-->
-          <!--<version>1.7.0</version>-->
-      <!--</dependency>-->
+       <!--Component Annotations Dependencies-->
+      <dependency>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.apache.felix.scr</artifactId>
+          <version>1.6.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.apache.felix.scr.annotations</artifactId>
+          <version>1.7.0</version>
+      </dependency>
       <!-- Testing Dependencies -->
       <dependency>
           <groupId>junit</groupId>
