--- a/org.livingplace.controlling.informations.sensors.doorcontrol/pom.xml
+++ b/org.livingplace.controlling.informations.sensors.doorcontrol/pom.xml
@@ -76,17 +76,17 @@
             <artifactId>org.livingplace.controlling.informations.registry.api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--&lt;!&ndash; Component Annotations Dependencies &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.felix</groupId>-->
-            <!--<artifactId>org.apache.felix.scr</artifactId>-->
-            <!--<version>1.6.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.felix</groupId>-->
-            <!--<artifactId>org.apache.felix.scr.annotations</artifactId>-->
-            <!--<version>1.7.0</version>-->
-        <!--</dependency>-->
+        <!-- Component Annotations Dependencies -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <version>1.7.0</version>
+        </dependency>
 
         <!-- Messages -->
         <!--<dependency>-->
@@ -99,9 +99,5 @@
             <artifactId>org.livingplace.bundles.messagingdefines</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
-
-
-
 </project>
