--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -172,15 +172,17 @@
           <artifactId>pax-logging-api</artifactId>
           <version>${pax-logging.version}</version>
       </dependency>
-
-
-      <!-- Messages -->
+      <!-- Messaging Factory Services -->
       <dependency>
-          <groupId>org.livingplace.controlling.doordefines</groupId>
-          <artifactId>doordefines</artifactId>
-          <version>1.7-SNAPSHOT</version>
+          <groupId>org.livingplace.bundles.messaging</groupId>
+          <artifactId>org.livingplace.messaging.activemq.api</artifactId>
+          <version>1.0-SNAPSHOT</version>
       </dependency>
-
+      <dependency>
+          <groupId>org.livingplace.bundles.messaging</groupId>
+          <artifactId>org.livingplace.messaging.activemq.impl</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 
 </project>
